--- a/res/layout/decide.xml
+++ b/res/layout/decide.xml
@@ -5,6 +5,17 @@
     android:background="@drawable/bkg" >
 
     <ImageButton
+        android:id="@+id/cntrlbtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="80dp"
+        android:background="#00000000"
+        android:scaleType="fitCenter"
+        android:src="@drawable/control" />
+
+    <ImageButton
         android:id="@+id/spybtn"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -16,65 +27,81 @@
         android:src="@drawable/spy" />
 
     <ImageButton
-        android:id="@+id/cntrlbtn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/spybtn"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="82dp"
+        android:id="@+id/infobtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
         android:background="#00000000"
         android:scaleType="fitCenter"
-        android:src="@drawable/control" />
-
-    <TextView
-        android:id="@+id/cntrltxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/cntrlbtn"
-        android:layout_below="@+id/cntrlbtn"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="105dp"
-        android:text="Control"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:typeface="monospace" />
-
-    <TextView
-        android:id="@+id/spytxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/cntrltxt"
-        android:layout_alignBottom="@+id/cntrltxt"
-        android:layout_alignLeft="@+id/spybtn"
-        android:layout_marginLeft="30dp"
-        android:text="Spy"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:typeface="monospace" />
+        android:src="@drawable/informationideogram" />
 
     <ImageButton
-        android:id="@+id/infobtn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/cntrltxt"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
+        android:id="@+id/helpbtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
         android:background="#00000000"
         android:scaleType="fitCenter"
-        android:src="@drawable/info" />
+        android:src="@drawable/questionideogram" />
 
     <TextView
-        android:id="@+id/creditstxt"
-        android:layout_width="wrap_content"
+        android:id="@+id/infotxt"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/infobtn"
-        android:layout_centerHorizontal="true"
+        android:layout_alignLeft="@+id/infobtn"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="6dp"
+        android:gravity="center_horizontal"
         android:text="Info"
-        android:textColor="@android:color/black"
-        android:textSize="13sp"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:typeface="monospace" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/helpbtn"
+        android:layout_marginBottom="6dp"
+        android:text="Help"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:typeface="monospace" />
+
+    <TextView
+        android:id="@+id/helpcontent"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/spybtn"
+        android:layout_below="@+id/spybtn"
+        android:text="Spy"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:typeface="monospace" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/cntrlbtn"
+        android:layout_alignTop="@+id/helpcontent"
+       android:gravity="center_horizontal"
+        android:text="Control"
+        android:textColor="#000000"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace" />
 
