--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -24,7 +24,9 @@
         android:layout_below="@+id/creditstxt"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="23dp"
+        android:gravity="center"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:typeface="monospace" />
 
