--- a/app/src/main/res/layout/activity_rtspserver_spy.xml
+++ b/app/src/main/res/layout/activity_rtspserver_spy.xml
@@ -9,4 +9,27 @@
         android:id="@+id/surface"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/msgTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/spytxt"
+        android:layout_alignBottom="@+id/spytxt"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="14dp"
+        android:text="TextView"
+        android:textColor="#00FF00" />
+
+    <TextView
+        android:id="@+id/spytxt"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        android:textColor="#FF0000" />
+
 </RelativeLayout>
