--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
 
     <style xmlns:android="http://schemas.android.com/apk/res/android" name="RadioButton" parent="@android:style/Widget.CompoundButton">
         <item name="android:button">@null</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:padding">5dp</item>
     </style>
 
